--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
        
         <img src="image/html.png" alt="Minha imagem de teste">
 
+        <a href="https://www.w3schools.com/">Saiba mais sobre HTML</a>
+
         <ul>
             <li> É uma linguagem de marcação utilizada na construção de páginas web.</li>
             <li> Documentação HTML podem ser interpretadas por navegadores</li>
@@ -29,7 +31,7 @@
             <li> HyTimer é um padrão para representação estruturada de hipermídia e conteúdo baseado em tempo.</li>
         </ul>
 
-        <a href="https://www.w3schools.com/">Saiba mais sobre HTML</a>
+       <button> Alterar usuário </button>
 
         <script src="scripts/script.js"></script>
     </body>
